--- a/go-echo-htmx-templ/templates/hello.templ
+++ b/go-echo-htmx-templ/templates/hello.templ
@@ -1,5 +1,5 @@
 package templates
 
 templ Hello(name string) {
-	<div>Hello, { name }</div>
+	<div class="bg-green-500 text-red-500">Hello, { name }</div>
 }
