--- a/go-echo-htmx-templ/templates/index.templ
+++ b/go-echo-htmx-templ/templates/index.templ
@@ -1,16 +1,22 @@
 package templates
 
-templ Index(){
-   <html lang="en">
+import "go-echo-htmx-templ/templates/common"
+
+templ Index() {
+	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
 			<title>Golang TODO</title>
 			<link href="/css/output.css" rel="stylesheet"/>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+			<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet"/>
 		</head>
 		<body>
 			<div class="w-full h-screen flex flex-col justify-centeer items-center">
-            @Hello("Vishnu")
-            </div>
+				@Hello("Vishnu")
+				@common.Button("blue", "Add")
+			</div>
 		</body>
 	</html>
 }
