--- a/go-echo-htmx-templ/templates/common/button.templ
+++ b/go-echo-htmx-templ/templates/common/button.templ
@@ -10,7 +10,7 @@ templ Button(variant string, label string) {
 			{ label }
 		</button>
 	} else {
-		<button type="button" class="px-5 py-2.5 font-medium font-cb bg-gray-50 hover:bg-gray-100 hover:text-gray-600 text-gray-500 rounded-lg text-sm">
+		<button type="button" class="px-5 py-2.5 font-medium font-rs bg-gray-50 hover:bg-gray-100 hover:text-gray-600 text-gray-500 rounded-lg text-sm">
 			{ label }
 		</button>
 	}
