--- a/go-echo-htmx-templ/templates/index.templ
+++ b/go-echo-htmx-templ/templates/index.templ
@@ -10,11 +10,11 @@ templ Index() {
 			<link href="/css/output.css" rel="stylesheet"/>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-			<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet"/>
+			<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Rubik+Scribble&display=swap" rel="stylesheet"/>
 		</head>
 		<body>
-			<div class="w-full h-screen flex flex-col justify-centeer items-center">
-				@Hello("Vishnu")
+			<div class="w-full h-screen flex flex-col justify-centeer items-center font-mono">
+				@Hello("Vishy")
 				@common.Button("blue", "Add")
 			</div>
 		</body>
