--- a/go-echo-htmx-templ/templates/index.templ
+++ b/go-echo-htmx-templ/templates/index.templ
@@ -2,8 +2,9 @@ package templates
 
 import "go-echo-htmx-templ/templates/common"
 import "go-echo-htmx-templ/templates/components"
+import "go-echo-htmx-templ/dto"
 
-templ Index() {
+templ Index(items []dto.TableItem) {
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
@@ -20,7 +21,7 @@ templ Index() {
 						<p class="text-4xl font-bold font-mono">Simple <span class="italic text-[#FAF089] drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]">TODO</span> List </p>
 						<i data-lucide="clipboard-check" class="w-10 h-10"></i>
 					</div>
-					@common.Table([]common.TableItem{{1,"go learn","in progress"},{2,"leetcode daily","new"}})
+					@common.Table(items)
 					@components.AddTodoInput()
 				</div>
 			</div>
