--- a/go-echo-htmx-templ/templates/common/table.templ
+++ b/go-echo-htmx-templ/templates/common/table.templ
@@ -4,7 +4,7 @@ import "strconv"
 import "go-echo-htmx-templ/dto"
 
 templ Table(item []dto.TableItem) {
-	<table>
+	<table id="todo-table">
 		<thead>
 			<tr>
 				<th class="border px-4 py-2">ID</th>
