--- a/go-echo-htmx-templ/templates/components/addTodoInput.templ
+++ b/go-echo-htmx-templ/templates/components/addTodoInput.templ
@@ -1,15 +1,25 @@
 package components
 
 templ AddTodoInput() {
-	<div class="relative flex items-center">
+	<form
+ 		class="relative flex items-center"
+ 		hx-post="/add-todo"
+ 		hx-swap="outerHTML"
+ 		hx-target="#todo-table"
+ 		hx-on::after-request="this.reset()"
+	>
 		<input
-            id="todoInput"
+ 			name="todotext"
+ 			id="todotext"
  			type="text"
  			class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring focus:ring-blue-400"
  			placeholder="Add Todo..."
 		/>
-		<button hx-post="/add-todo" hx-vals='javascript:{"todoText": document.getElementById("todoInput").value}' hx-swap="outerHTML" hx-target="#todo-table" type="button" class="absolute right-2 top-2 px-2 py-1 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-400">
+		<button
+ 			type="submit"
+ 			class="absolute right-2 top-2 px-2 py-1 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-400"
+		>
 			<i data-lucide="send-horizontal"></i>
 		</button>
-	</div>
+	</form>
 }
